--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -3,9 +3,15 @@ textarea {
 }
 .buttonRow button {
     /* display: inline-block; */
-    margin: 10px 8px 0 0;
+    margin: 30px 8px 0 0;
 }
 
 #submit {
     margin-top: 10px;
+}
+
+.emailContainer {
+    border: 1px solid lighgrey;
+    padding: 15px 25px 30px;
+    box-shadow: 0 0 4px 2px rgba(0,0,0,0.2);
 }
