--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -52,6 +52,7 @@
                 <div class="col" id="emailBody"></div>
             </div>
         </div>
+        <div class="buttonRow"></div>
     </div>
     
 {% endblock %}
