--- a/mail/templates/mail/layout.html
+++ b/mail/templates/mail/layout.html
@@ -11,7 +11,7 @@
         {% endblock %}
     </head>
     <body>
-        <div class="container">
+        <div class="container mt-5">
             {% block body %}
             {% endblock %}
         </div>
